crates/parser/src/snapshots/parser__tests__parse_inline_err@0107_structures_stmt_err.ath.snap
---
source: crates/parser/src/tests.rs
description: "structures\n"
input_file: crates/parser/test_data/parser/inline/err/stmt/0107_structures_stmt_err.ath
---
STRUCTURES_STMT
  STRUCTURES_KW "structures"
  WHITESPACE "\n"
error 10: expected a structure definition

