crates/parser/src/snapshots/parser__tests__parse_inline_err@0109_datatype_stmt_err.ath.snap
---
source: crates/parser/src/tests.rs
description: "datatype\n"
input_file: crates/parser/test_data/parser/inline/err/stmt/0109_datatype_stmt_err.ath
---
DATATYPE_STMT
  DATATYPE_KW "datatype"
  WHITESPACE "\n"
error 8: expected a datatype definition

