crates/parser/src/snapshots/parser__tests__parse_inline_err@0110_structure_stmt_err.ath.snap
---
source: crates/parser/src/tests.rs
description: "structure\n"
input_file: crates/parser/test_data/parser/inline/err/stmt/0110_structure_stmt_err.ath
---
STRUCTURE_STMT
  STRUCTURE_KW "structure"
  WHITESPACE "\n"
error 9: expected a structure definition

