crates/parser/src/snapshots/parser__tests__parse_inline_err@0112_datatypes_stmt_err.ath.snap
---
source: crates/parser/src/tests.rs
description: "datatypes\n"
input_file: crates/parser/test_data/parser/inline/err/stmt/0112_datatypes_stmt_err.ath
---
DATATYPES_STMT
  DATATYPES_KW "datatypes"
  WHITESPACE "\n"
error 9: expected a datatype definition

