crates/parser/src/snapshots/parser__tests__parse_inline_err@0115_let_part_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "let { foo :=   } a\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0115_let_part_no_phrase.ath
---
LET_EXPR
  LET_KW "let"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_PART
    IDENT_PAT
      MAYBE_WILDCARD_TYPED_PARAM
        IDENTIFIER
          IDENT "foo"
    WHITESPACE " "
    COLON_EQ ":="
  WHITESPACE "   "
  R_CURLY "}"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "a"
  WHITESPACE "\n"
error 12: Expected to find a phrase for the let binding

