crates/parser/src/snapshots/parser__tests__parse_inline_err@0116_pick_witness_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witness a for\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0116_pick_witness_no_phrase.ath
---
PICK_WITNESS_DED
  PICK_WITNESS_KW "pick-witness"
  WHITESPACE " "
  NAME
    IDENT "a"
  WHITESPACE " "
  FOR_KW "for"
  WHITESPACE "\n"
error 18: expected phrase in pick witness binding
error 18: expected body for pick witness

