crates/parser/src/snapshots/parser__tests__parse_inline_err@0117_pick_witnesses_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witnesses a for\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0117_pick_witnesses_no_phrase.ath
---
PICK_WITNESSES_DED
  PICK_WITNESSES_KW "pick-witnesses"
  WHITESPACE " "
  NAME
    IDENT "a"
  WHITESPACE " "
  FOR_KW "for"
  WHITESPACE "\n"
error 20: expected phrase in pick witnesses binding
error 20: expected body for pick witnesses

