crates/parser/src/snapshots/parser__tests__parse_inline_err@0118_method_expr_no_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "method (foo)\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0118_method_expr_no_ded.ath
---
METHOD_EXPR
  METHOD_KW "method"
  WHITESPACE " "
  L_PAREN "("
  MAYBE_WILDCARD_TYPED_PARAM
    IDENTIFIER
      IDENT "foo"
  R_PAREN ")"
  WHITESPACE "\n"
error 12: Expected to find a body (ded) for the method expression

